Make post details page

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -4,8 +4,12 @@
     <h2><span class="first-letter">D</span>ISCOVER THE WORLD OF THE TRUE ROMANTIC</h2>
     <nav>
       <ul>
-        <li>SHOP</li>
-        <li>LEARN</li>
+        <li>
+          <span>SHOP</span>
+        </li>
+        <li>
+          <span>LEARN</span>
+        </li>
         <li [routerLink]="['./']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
           <span>DISCOVER</span>
         </li>
