--- a/src/app/blog/posts/post/post.component.html
+++ b/src/app/blog/posts/post/post.component.html
@@ -1,4 +1,6 @@
-<img [src]="imageUrl" alt="" class="post-image">
-<span class="post-title" #changedBlock>{{ post.title }}</span>
+<div (click)="openPostDetails()">
+  <img [src]="imageUrl" alt="" class="post-image">
+  <span class="post-title" #changedBlock>{{ post.title }}</span>
+</div>
 
 
