make post-edit component

--- a/src/app/blog/posts/post-details/post-details.component.html
+++ b/src/app/blog/posts/post-details/post-details.component.html
@@ -30,6 +30,7 @@
   <div class="post-nav">
     <div class="arrow-left" (click)="previousPost()"></div>
     <div class="arrow-right" (click)="nextPost()"></div>
+    <button class="edit-post" (click)="onEditPost()">Edit post</button>
   </div>
 </div>
 
