--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+
+@import '../node_modules/quill/dist/quill.core.css';
+@import '../node_modules/quill/dist/quill.bubble.css';
+@import '../node_modules/quill/dist/quill.snow.css';
+
 @font-face {
   font-family: 'goudy_old_stylebold';
   src: url('/assets/Fonts/goudy-style-bold/911fonts.com_goudyoldstylebold__-_911fonts.com_fonts_6fnh-webfont.woff2') format('woff2'),
