--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -16,13 +16,6 @@
       font-weight: 600;
       letter-spacing: 1px;
       font-family: 'goudy_old_style_small_caps_Rg';
-      .first-letter {
-        font-family: 'preciousregular';
-        font-weight: 700;
-        margin-right: 7px;
-        font-size: 40px;
-        line-height: 1;
-      }
     }
     ul {
       list-style: none;
@@ -30,6 +23,8 @@
       justify-content: center;
       align-items: center;
       background-color: white;
+      padding-left: 0;
+      margin-left: 0;
       li {
         cursor: pointer;
         margin: 0 25px;
@@ -116,4 +111,64 @@
 
   }
 
+}
+//Media rules
+
+
+@media screen and (max-width:991px){
+  .posts-wrapper {
+    header {
+      h2 {
+        font-size: 20px;
+        padding-bottom: 0;
+        align-items: center;
+      }
+    }
+  }
+}
+@media screen and (max-width:768px){
+  .posts-wrapper {
+    header {
+      h2 {
+        font-size: 17px;
+        align-items: center;
+      }
+      ul {
+        li {
+          margin: 0 4%;
+          span {
+            font-size: 16px;
+          }
+        }
+      }
+    }
+    .blog-container {
+      padding: 20px;
+    }
+  }
+}
+@media screen and (max-width: 576px) {
+  .posts-wrapper {
+    header {
+      text-align: center;
+      ul {
+        li {
+          span {
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 450px) {
+  .posts-wrapper {
+    header {
+      ul {
+        li {
+          margin: 0 2%;
+        }
+      }
+    }
+  }
 }
