--- a/src/app/blog/create-post/create-post.component.html
+++ b/src/app/blog/create-post/create-post.component.html
@@ -12,7 +12,7 @@
 	</div>
 	<div class="form-group">
 		<strong class="text">Text of your post</strong>
-		<quill-editor name="editor" [modules]="{toolbar: optToolbar}" [(ngModel)]="text"></quill-editor>
+		<quill-editor name="editor" #editor [modules]="{toolbar: optToolbar}" [(ngModel)]="text"></quill-editor>
 	</div>
 	<div class="form-group">
 		<strong class="text">Image of your post</strong>
