--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="profile-wrapper">
-  <div class="photo">
-    <img [src]="url" class="avatar">
+  <div class="image-wrapper">
+    <img [src]="url" class="image">
     <input type="file"
            name="file"
            id="file"
