--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -129,9 +129,11 @@
 @media screen and (max-width:768px){
   .posts-wrapper {
     header {
+      height: 110px;
       h2 {
         font-size: 17px;
         align-items: center;
+        height: 70px;
       }
       ul {
         li {
