--- a/src/app/blog/posts/post-details/post-details.component.scss
+++ b/src/app/blog/posts/post-details/post-details.component.scss
@@ -66,10 +66,31 @@
   cursor: pointer;
 }
 .comments-wrapper {
-  min-height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
+  .comment-heading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px solid #595f66;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    width: 100%;
+    height: 35px;
+    border-bottom: none;
+    padding: 0 15px;
+  }
+  .comment-body {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    border: 2px solid #595f66;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    width: 100%;
+    padding: 0 15px;
+    min-height: 35px;
+  }
 }
 .info-message {
   font-size: 22px;
@@ -105,6 +126,9 @@
     background-color: #ccc;
     font-family: 'goudy_old_stylebold_italic';
     cursor: pointer;
+    &:hover {
+      background-color: #eee;
+    }
   }
 }
 .post-nav {
@@ -139,13 +163,11 @@
     position: absolute;
     right: 0;
     cursor: pointer;
-    width: 100px;
-    height: 100%;
-    border: 2px solid #595f66;
-    border-radius: 5px;
-    background-color: #ccc;
     font-family: 'goudy_old_stylebold_italic';
     cursor: pointer;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
 }
