--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,3 @@
-
-@import '../node_modules/quill/dist/quill.core.css';
-@import '../node_modules/quill/dist/quill.bubble.css';
-@import '../node_modules/quill/dist/quill.snow.css';
-
 @font-face {
   font-family: 'goudy_old_stylebold';
   src: url('/assets/Fonts/goudy-style-bold/911fonts.com_goudyoldstylebold__-_911fonts.com_fonts_6fnh-webfont.woff2') format('woff2'),
@@ -31,9 +26,10 @@
   font-weight: normal;
   font-style: normal;
 }
-button:focus, input:focus {
+button:focus, input:focus, .form-control:focus {
   outline: none;
   outline-color: transparent;
+  box-shadow: none;
 }
 body {
   background-image: url('assets/newAssets/7671.jpg');
@@ -44,6 +40,34 @@ body {
   height: 100vh;
   overflow-x: hidden;
 }
+.inputfile {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+.inputfile + label {
+  font-size: 16px;
+  color: white;
+  background-color: grey;
+  display: inline-block;
+  cursor: pointer;
+  padding: 3px 10px;
+  border-radius: 5px;
+  transition: all .2s ease;
+  display: flex;
+  flex-wrap: wrap;
+}
+.inputfile:focus + label,
+.inputfile + label:hover {
+  background-color: rgb(77, 144, 254);
+  box-shadow: 0 0 3px 2px rgba(0, 0, 0, .7);
+}
+
+/* toast styles */
+
 .toast-center-center {
   top: 50%;
   left: 50%;
@@ -86,7 +110,6 @@ body {
   left: 12px;
 }
 
-/* toast styles */
 .toast-title {
   font-weight: bold;
 }
@@ -233,3 +256,5 @@ button.toast-close-button {
     width: 25em;
   }
 }
+
+/* toast styles */
