--- a/src/app/blog/edit-post/edit-post.component.html
+++ b/src/app/blog/edit-post/edit-post.component.html
@@ -27,4 +27,5 @@
     </div>
   </div>
   <button type="submit" class="btn btn-primary">Save changes</button>
+  <button type="submit" class="btn btn-danger">Delete post</button>
 </form>
