--- a/src/app/blog/edit-post/edit-post.component.scss
+++ b/src/app/blog/edit-post/edit-post.component.scss
@@ -35,6 +35,9 @@ form {
   min-height: 50px;
   font-size: 18px;
 }
+.btn-danger {
+  margin-left: 30px;
+}
 
 @media screen and (max-width:767px){
   form {
