--- a/src/app/blog/posts/post-details/post-details.component.scss
+++ b/src/app/blog/posts/post-details/post-details.component.scss
@@ -2,13 +2,51 @@
   top: 70px;
   max-width: 1000px;
 }
-/deep/ .modal-body {
+.details-modal-body {
   padding: 50px 50px 0;
   display: flex;
   flex-direction: column;
   border-top: 10px solid black;
 }
-/deep/ .modal-footer {
+.details-modal-title {
+  position: absolute;
+  padding: 0 5px;
+  min-width: 150px;
+  background: white;
+  border: 2px solid black;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: -25px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-transform: uppercase;
+  font-size: 20px;
+  font-family: 'goudy_old_style_small_caps_Rg';
+  &:before, &:after {
+    content: "";
+    display: block;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: center center;
+    width: 90px;
+    height: 25px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  &:before {
+    background-image: url('/assets/newAssets/picture-arrow-up.png');
+    top: -23px;
+  }
+  &:after {
+    background-image: url('/assets/newAssets/picture-arrow-down.png');
+    top: 34px;
+  }
+}
+.details-modal-footer {
+  border-top: none;
   border-bottom: 10px solid black;
 }
 /deep/ .close span {
@@ -71,7 +109,6 @@
   .comment-heading {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     border: 2px solid #595f66;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -79,17 +116,65 @@
     height: 35px;
     border-bottom: none;
     padding: 0 15px;
+    color: #6f7989;
+  }
+  .date-item {
+    margin-left: auto;
   }
   .comment-body {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
     border: 2px solid #595f66;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     width: 100%;
-    padding: 0 15px;
+    padding: 5px 15px;
     min-height: 35px;
+    overflow: hidden;
+    .cta {
+      border: 1px solid black;
+      border-radius: 4px;
+      font-family: 'goudy_old_stylebold_italic';
+      margin-left: auto;
+      font-size: 14px;
+      cursor: pointer;
+      background-color: #eee;
+    }
+  }
+  .edit-input-wrapper {
+    height: 40px;
+    width: 100%;
+    display: flex;
+    position: relative;
+    .edit-comment-input {
+      border: 2px solid #595f66;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
+      width: 100%;
+      display: inline-block;
+      padding: 5px 70px 5px 15px;
+    }
+    .edit-cta {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      border: 1px solid black;
+      border-radius: 4px;
+      font-family: 'goudy_old_stylebold_italic';
+      font-size: 14px;
+      cursor: pointer;
+      background-color: #c5f7e5;
+    }
+  }
+  .close-icon {
+    width: 11px;
+    height: 11px;
+    margin-left: 7px;
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 .info-message {
@@ -171,42 +256,6 @@
   }
 
 }
-/deep/ h5 {
-  position: absolute;
-  padding: 0 5px;
-  min-width: 150px;
-  background: white;
-  border: 2px solid black;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: -25px;
-  left: 50%;
-  transform: translateX(-50%);
-  text-transform: uppercase;
-  font-size: 20px;
-  font-family: 'goudy_old_style_small_caps_Rg';
-  &:before, &:after {
-    content: "";
-    display: block;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-position: center center;
-    width: 90px;
-    height: 25px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  &:before {
-    background-image: url('/assets/newAssets/picture-arrow-up.png');
-    top: -23px;
-  }
-  &:after {
-    background-image: url('/assets/newAssets/picture-arrow-down.png');
-    top: 34px;
-  }
-}
+
 
 
