--- a/src/app/blog/edit-post/edit-post.component.scss
+++ b/src/app/blog/edit-post/edit-post.component.scss
@@ -26,6 +26,9 @@ form {
       margin-top: 10px;
     }
   }
+  .btn {
+    font-family: 'goudy_old_stylebold_italic';
+  }
 }
 /deep/ .ql-toolbar, /deep/ .ql-container {
   width: 100%;
