--- a/src/app/blog/posts/post-details/post-details.component.html
+++ b/src/app/blog/posts/post-details/post-details.component.html
@@ -15,7 +15,7 @@
           <div class="comment-heading">
             <span class="heading-item">{{ comment.email.substring(0, comment.email.lastIndexOf('@')) }}</span>
             <span class="heading-item date-item">{{ formattedDate(comment.created) }}</span>
-            <img src="src/assets/cancel.svg" alt="" class="close-icon">
+            <img src="src/assets/cancel.svg" alt="close" class="close-icon" (click)="onDeleteComment(comment.id)">
           </div>
           <div class="comment-body" *ngIf="isViewMode || selectedComment !== comment.id">
             <div>{{ comment.text }}</div>
@@ -27,8 +27,9 @@
                    placeholder="Add a comment"
                    class="edit-comment-input"
                    autofocus
-                   [(ngModel)]="changedCommentText">
-            <button class="edit-cta" (click)="onUpdateComment()">Save</button>
+                   [(ngModel)]="changedCommentText"
+                   (keyup.enter)="onUpdateComment(comment.id)">
+            <button class="edit-cta" (click)="onUpdateComment(comment.id)">Save</button>
           </div>
         </div>
       </ng-container>
@@ -36,7 +37,7 @@
       <div class="input-wrapper">
         <input type="text" maxlength="255" placeholder="Add a comment" class="add-comment-input"
                [(ngModel)]="commentText" (keyup.enter)="onAddComment()">
-        <button class="cta" (click)="onAddComment()">Submit</button>
+        <button class="cta" (click)="onAddComment()" [disabled]="!commentText">Submit</button>
       </div>
     </div>
 </div>
