Make validation by roles

--- a/src/app/auth/register-modal/register-modal.component.scss
+++ b/src/app/auth/register-modal/register-modal.component.scss
@@ -1,25 +1,1 @@
-/deep/ .modal-dialog {
-  top: 50px;
-  max-width: 500px;
-}
-form {
-  padding: 15px;
-  .form-control:focus {
-    box-shadow: 0 0 0 1px rgba(0,123,255,.25);
-  }
-  .validate-error {
-    color: red;
-    font-size: 12px;
-    margin-top: -10px;
-    margin-bottom: 10px;
-  }
-  .input-error {
-    border: 1px solid red;
-    &:focus {
-      box-shadow: 0 0 0 1px red;
-    }
-  }
-  button[disabled] {
-    cursor: not-allowed;
-  }
-}
+@import '../login-modal/login-modal.component';
