--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="posts-wrapper">
   <header>
-    <h2>DISCOVER THE WORLD OF THE TRUE ROMANTIC</h2>
+    <h2 class="heading"><span class="first-letter">D</span>ISCOVER THE WORLD OF THE TRUE ROMANTIC</h2>
     <nav>
       <ul>
         <li>
