--- a/src/app/blog/edit-post/edit-post.component.scss
+++ b/src/app/blog/edit-post/edit-post.component.scss
@@ -41,6 +41,12 @@ form {
   min-height: 50px;
   font-size: 18px;
 }
+.validate-error {
+  color: red;
+  font-size: 12px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 .my-button {
   font-family: 'goudy_old_stylebold_italic';
   background-color: #eee;
