--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,9 +20,9 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'preciousregular';
-  src: url('/assets/Fonts/precious/precious-webfont.woff2') format('woff2'),
-  url('/assets/Fonts/precious/precious-webfont.woff') format('woff');
+  font-family: 'xirwenaregular';
+  src: url('/assets/Fonts/xirwena/xirwena.regular-webfont.woff2') format('woff2'),
+  url('/assets/Fonts/xirwena/xirwena.regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
