--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -5,7 +5,7 @@
     height: 140px;
     background-color: #eee;
     margin-bottom: 30px;
-    h2 {
+    .heading {
       display: flex;
       justify-content: center;
       align-items: flex-end;
@@ -16,6 +16,11 @@
       font-weight: 600;
       letter-spacing: 1px;
       font-family: 'goudy_old_style_small_caps_Rg';
+      .first-letter {
+        font-family: 'xirwenaregular';
+        font-size: 34px;
+        line-height: 1;
+      }
     }
     ul {
       list-style: none;
@@ -112,16 +117,18 @@
   }
 
 }
-//Media rules
 
 
 @media screen and (max-width:991px){
   .posts-wrapper {
     header {
-      h2 {
+      .heading {
         font-size: 20px;
         padding-bottom: 0;
         align-items: center;
+        .first-letter {
+          font-size: 30px;
+        }
       }
     }
   }
@@ -130,10 +137,13 @@
   .posts-wrapper {
     header {
       height: 110px;
-      h2 {
+      .heading {
         font-size: 17px;
         align-items: center;
         height: 70px;
+        .first-letter {
+          font-size: 25px;
+        }
       }
       ul {
         li {
@@ -153,6 +163,11 @@
   .posts-wrapper {
     header {
       text-align: center;
+      .heading{
+        display: block;
+        padding-top: 20px;
+        margin-bottom: 6px;
+      }
       ul {
         li {
           span {
