--- a/src/app/blog/posts/post-details/post-details.component.scss
+++ b/src/app/blog/posts/post-details/post-details.component.scss
@@ -231,12 +231,15 @@
     margin: 10px 70px;
     position: relative;
     text-align: center;
+    &.not-active {
+      cursor: not-allowed;
+    }
   }
   .arrow-right {
-    background-image: url('/assets/arrow-right.png');
+    background-image: url('/src/assets/arrow-right.png');
   }
   .arrow-left {
-    background-image: url('/assets/arrow-left.png');
+    background-image: url('/src/assets/arrow-left.png');
     &:before {
       content: "|";
       position: absolute;
