--- a/src/app/auth/register-modal/register-modal.component.html
+++ b/src/app/auth/register-modal/register-modal.component.html
@@ -36,7 +36,7 @@
         ngModel
         required
         #password="ngModel"
-        [ngClass]="{'input-error': passwordMatchError() && password2.value}">
+        [ngClass]="{'input-error': passwordMatchError() && password2.value || checkErrors('password')}">
     </div>
     <div *ngIf="checkErrors('password')" class="validate-error">{{ checkErrors('password') }}</div>
     <div class="form-group">
