--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -66,7 +66,7 @@
   .profile-wrapper {
     flex-direction: column;
     justify-content: center;
-    .photo {
+    .image-wrapper {
       flex:1;
       margin: 0 auto;
       width: 100%;
