--- a/src/app/users/users-list/user/user.component.scss
+++ b/src/app/users/users-list/user/user.component.scss
@@ -1,7 +1,7 @@
 td {
-  border: 1px solid black;
   cursor: pointer;
   padding: 5px;
+  border: 1px solid black;
   .inputfile {
       width: 0.1px;
       height: 0.1px;
@@ -68,7 +68,7 @@ td {
     border-radius: 5px;
     outline-radius: 5px;
     appearance: none;
-    background: url(../../../../assets/arrow.png) 96% / 10px no-repeat #eee;
+    background: url('/src/assets/arrow.png') 96% / 10px no-repeat #eee;
     &:focus {
       outline: none;
       border: 1px solid rgb(77, 144, 254);
