--- a/src/app/users/user-create/user-create.component.html
+++ b/src/app/users/user-create/user-create.component.html
@@ -45,6 +45,6 @@
         <option *ngFor="let role of roles">{{ role.role }}</option>
       </select>
     </div>
-    <button type="submit" [disabled]="!email.valid || !password.value" class="btn btn-primary">Create</button>
+    <button type="submit" [disabled]="!appForm.valid" class="btn btn-primary">Create</button>
   </div>
 </form>
